2010-07-12 alexandru Csete >oz9aec at gmail.com>

    * src/mod-mgr.c:
    Allow docked modules to be reordered by dragging the tabs.

    * src/configure-ac:
    Require GooCanvas 0.15. Updated dependencies to match Ubuntu 9.10 Karmic.

    * src/predict-tools.c:
    Include TCA when creating copy of a pass.

    * src/gtk-sky-glance.c:
    Implemented pass summary pop-up when mouse hovers over a pass. Works like
    tooltips.
    Turn off anitialias for rectangles to make them look sharper.
    Increase transparency of fill color.

    * src/sat-cfg.c:
    Changed default value of SKY_AT_GLANCE/COLOUR_07 to be darker.

    * src/gtk-polar-view.c:
    Added satellite tooltips showing current Az, El and time to LOS.

    * src/gtk-sat-map.c:
    Added satellite tooltips in map view showing current SSP Lat, Lon, Az, El
    and time to AOS/LOS.


2010-07-11 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata:
    Synchronise satellite database with Celestrak.
    
    * src/gtk-rig-ctrl.c:
    Simplified exec_toggle_tx_cycle() to only do something while PTT=FALSE and
    without any dial feedback since dial feedback makes no sense when using 
    such radios.
    Added function to set_ptt().
    Implemented controller for RIG_TYPE_ROGGLE_MAN (FT-817/857/897 manual TX).

    * src/gtk-rig-ctrl.c:
    * src/gtk-rig-ctrl.h:
    Updated RIG_TYPE_TOGGLE_AUTO controller to perform TX frequency update only
    once every 10 seconds.
    
    * src/sat-pref-rig-editor.c:
    Automatically set PTT type for RIG_TYPE_TOGGLE_AUTO and RIG_TYPE_TOGGLE_MAN.


2010-07-09 Alexandru Csete <oz9aec at gmail.com>

    * src/radio-conf.h:
    * src/sat-pref-rig.c:
    * src/sat-pref-rig-editor.c:
    * src/gtk-rig-ctrl.c:
    Added option for manual T/R switch for FT-817/857/897 (RIG_TYPE_TOGGLE_MAN).
    The auto mode has been renamed to RIG_TYPE_TOGGLE_AUTO.
    
    * data/trsp/36122.trsp:
    Fixed incorrect V/U packet frequencies.

    * data/trsp/32791.trsp: